--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,8 @@ dependencies:
   url_launcher: ^6.3.1
   unorm_dart: ^0.3.0
   firebase_analytics: ^11.4.4
+  flutter_inappwebview: ^5.7.2
+
 
 dev_dependencies:
   flutter_test:
