“애널리틱스연결성공”

--- a/firebase.json
+++ b/firebase.json
@@ -1,55 +1,1 @@
-{
-  "flutter": {
-    "platforms": {
-      "android": {
-        "default": {
-          "projectId": "wooju-study-library",
-          "appId": "1:461429969883:android:e165b13e77c9b53ec4cdfe",
-          "fileOutput": "android/app/google-services.json"
-        }
-      },
-      "ios": {
-        "default": {
-          "projectId": "wooju-study-library",
-          "appId": "1:461429969883:ios:24ce3a13134c123cc4cdfe",
-          "uploadDebugSymbols": false,
-          "fileOutput": "ios/Runner/GoogleService-Info.plist"
-        }
-      },
-      "macos": {
-        "default": {
-          "projectId": "wooju-study-library",
-          "appId": "1:461429969883:ios:24ce3a13134c123cc4cdfe",
-          "uploadDebugSymbols": false,
-          "fileOutput": "macos/Runner/GoogleService-Info.plist"
-        }
-      },
-      "dart": {
-        "lib/firebase_options.dart": {
-          "projectId": "wooju-study-library",
-          "configurations": {
-            "android": "1:461429969883:android:e165b13e77c9b53ec4cdfe",
-            "ios": "1:461429969883:ios:24ce3a13134c123cc4cdfe",
-            "macos": "1:461429969883:ios:24ce3a13134c123cc4cdfe",
-            "web": "1:461429969883:web:650bd6c0f1af56c7c4cdfe",
-            "windows": "1:461429969883:web:dc8f7e325e1ec2b4c4cdfe"
-          }
-        }
-      }
-    }
-  },
-  "hosting": {
-    "public": "build/web",
-    "ignore": [
-      "firebase.json",
-      "**/.*",
-      "**/node_modules/**"
-    ],
-    "rewrites": [
-      {
-        "source": "**",
-        "destination": "/index.html"
-      }
-    ]
-  }
-}
+{"flutter":{"platforms":{"android":{"default":{"projectId":"wooju-study-library","appId":"1:461429969883:android:e165b13e77c9b53ec4cdfe","fileOutput":"android/app/google-services.json"}},"ios":{"default":{"projectId":"wooju-study-library","appId":"1:461429969883:ios:24ce3a13134c123cc4cdfe","uploadDebugSymbols":false,"fileOutput":"ios/Runner/GoogleService-Info.plist"}},"macos":{"default":{"projectId":"wooju-study-library","appId":"1:461429969883:ios:24ce3a13134c123cc4cdfe","uploadDebugSymbols":false,"fileOutput":"macos/Runner/GoogleService-Info.plist"}},"dart":{"lib/firebase_options.dart":{"projectId":"wooju-study-library","configurations":{"android":"1:461429969883:android:e165b13e77c9b53ec4cdfe","ios":"1:461429969883:ios:24ce3a13134c123cc4cdfe","macos":"1:461429969883:ios:24ce3a13134c123cc4cdfe","web":"1:461429969883:web:650bd6c0f1af56c7c4cdfe","windows":"1:461429969883:web:dc8f7e325e1ec2b4c4cdfe"}}}}},"hosting":{"public":"build/web","ignore":["firebase.json","**/.*","**/node_modules/**"],"rewrites":[{"source":"**","destination":"/index.html"}]}}
