--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,7 +39,7 @@ dependencies:
   unorm_dart: ^0.3.0
   firebase_analytics: ^11.4.5
   flutter_inappwebview: ^5.7.2
-
+  firebase_core: ^3.13.0
 
 dev_dependencies:
   flutter_test:
